# devforge-os

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md
desktop/compositor/: meson.build
desktop/compositor/include/: devforge.h
desktop/compositor/shaders/: blur.glsl  shadow.glsl  transition.glsl
desktop/compositor/src/: animations.c  compositor.c  input.c  main.c  output.c  xdg_shell.c
desktop/dock/: devforge-dock  devforge-dock.desktop  meson.build
desktop/dock/src/: dock.py
desktop/themes/: ai.css  apply_theme.py  base.css  devforge-apply-theme.in  devops.css  embedded.css  game.css  meson.build  security.css  web.css
desktop/topbar/: devforge-topbar  devforge-topbar.desktop  meson.build
desktop/topbar/src/: topbar.py
desktop/wallpapers/: generate.py
installer/src/: main.py
installer/src/backend/: disk_manager.py  package_installer.py  profile_configurator.py  system_configurator.py
installer/src/profiles/: ai_data.json  ai_ml.json  base.json  devops_cloud.json  devops_docker.json  embedded_arduino.json  embedded_linux.json  game_godot.json  game_unity.json  game_unreal.json  security_malware.json  security_pentest.json  web_backend.json  web_frontend.json  web_fullstack.json
installer/src/ui/: disk_setup.py  profile_select.py  progress.py  user_setup.py  welcome.py
scripts/: setup-ai-data.sh  setup-ai-ml.sh  setup-dev-environment.sh  setup-devops-cloud.sh  setup-devops-docker.sh  setup-embedded-arduino.sh  setup-embedded-linux.sh  setup-game-godot.sh  setup-game-unity.sh  setup-game-unreal.sh  setup-security-malware.sh  setup-security-pentest.sh  setup-web-backend.sh  setup-web-frontend.sh  setup-web-fullstack.sh
